--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "sass": "^1.54.0"
   }
 }
