--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "moment": "^2.29.4",
         "sass": "^1.54.0",
         "svelte-routing": "^1.6.0"
     }
